--- a/apps/web/.env
+++ b/apps/web/.env
@@ -1,2 +1,4 @@
 DATABASE_URL=mongodb+srv://tienlx97:W80r5bfJvWA2MWxm@dev.ws5mps0.mongodb.net/user
-SECRET=asdasdascasdasSSS
+
+NEXTAUTH_SECRET=my_ultra_secure_nextauth_secret
+NEXTAUTH_URL=http://127.0.0.1:3000
