--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "test": "turbo run test",
     "prepare": "husky install",
     "web": "cd ./apps/web && pnpm dev",
-    "sleeklingo": "cd ./apps/web && yarn dev",
-    "sleeklingo:start": "cd ./apps/web && yarn start",
-    "build:dev": "cd ./apps/web && yarn build:dev",
-    "build:prod": "cd ./apps/web && yarn build:prod",
+    "sleeklingo": "cd ./apps/web && pnpm dev",
+    "sleeklingo:start": "cd ./apps/web && pnpm start",
+    "build:dev": "cd ./apps/web && pnpm build:dev",
+    "build:prod": "cd ./apps/web && pnpm build:prod",
     "format-lint": "prettier --config .prettierrc --check --ignore-unknown .",
     "format-fix": "prettier --config .prettierrc --write --ignore-unknown -l .",
-    "analyze": "cd ./apps/web && yarn analyze",
-    "prisma": "cd ./apps/web && yarn prisma generate"
+    "analyze": "cd ./apps/web && pnpm analyze",
+    "prisma": "cd ./apps/web && pnpm prisma generate"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.2",
@@ -34,7 +34,7 @@
     "esbuild": "^0.17.5",
     "esbuild-jest": "^0.5.0",
     "eslint": "^8.33.0",
-    "eslint-config-custom": "*",
+    "eslint-config-custom": "workspace:*",
     "husky": "^8.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.4.1",
@@ -50,5 +50,5 @@
     "node": ">=14.0.0"
   },
   "dependencies": {},
-  "packageManager": "yarn@1.22.19"
+  "packageManager": "pnpm@8.6.10"
 }
