--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -7,11 +7,11 @@
   "dependencies": {
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
-    "next": "13.4.19",
+    "next": "13.4.10",
     "@fluentui/react-components": "9.30.4"
   },
   "devDependencies": {
     "typescript": "5.2.2",
-    "tsconfig": "*"
+    "tsconfig": "workspace:*"
   }
 }
