--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,30 +10,36 @@
     "test": "jest --coverage"
   },
   "dependencies": {
+    "@auth/core": "^0.14.0",
+    "@auth/prisma-adapter": "1.0.2",
     "@fluentui/react-components": "9.30.4",
+    "@hookform/resolvers": "3.3.1",
+    "@prisma/client": "5.2.0",
+    "bcryptjs": "2.4.3",
     "mousetrap": "1.6.5",
-    "next": "13.4.10",
+    "next": "13.4.19",
+    "next-auth": "0.0.0-manual.ffd05533",
+    "prisma": "5.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "7.46.1",
     "sharp": "^0.32.4",
     "ua-parser-js": "1.0.35",
     "ui": "workspace:*",
-    "next-auth": "4.23.1",
-    "@prisma/client": "5.2.0",
-    "@auth/prisma-adapter": "1.0.2",
-    "prisma": "5.2.0",
-    "zod": "3.22.2",
-    "react-hook-form": "7.46.1",
-    "@hookform/resolvers": "3.3.1",
-    "bcryptjs": "2.4.3"
+    "zod": "3.22.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "2.4.3",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "eslint-config-custom": "workspace:*",
     "jest-config": "workspace:*",
-    "tsconfig": "workspace:*",
-    "@types/bcryptjs": "2.4.3"
+    "tsconfig": "workspace:*"
+  },
+  "pnpm": {
+    "overrides": {
+      "@auth/core": "^0.14.0"
+    }
   }
 }
