--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,7 +26,8 @@
     "sharp": "^0.32.4",
     "ua-parser-js": "1.0.35",
     "ui": "workspace:*",
-    "zod": "3.22.2"
+    "zod": "3.22.2",
+    "client-only": "0.0.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "2.4.3",
@@ -35,7 +36,8 @@
     "@types/react-dom": "18.2.7",
     "eslint-config-custom": "workspace:*",
     "jest-config": "workspace:*",
-    "tsconfig": "workspace:*"
+    "tsconfig": "workspace:*",
+    "@types/gtag.js": "0.0.13"
   },
   "pnpm": {
     "overrides": {
