--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.4.1",
     "jest-watch-typeahead": "^2.2.2",
-    "lint-staged": "^13.1.0",
+    "lint-staged": "14.0.1",
     "msw": "^1.0.0",
     "prettier": "2.8.8",
     "pretty-quick": "3.1.3",
@@ -50,5 +50,10 @@
     "node": ">=14.0.0"
   },
   "dependencies": {},
-  "packageManager": "pnpm@8.6.10"
+  "packageManager": "pnpm@8.6.10",
+  "pnpm": {
+    "overrides": {
+      "@auth/core": "^0.14.0"
+    }
+  }
 }
