chore: add send email

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -27,7 +27,9 @@
     "ua-parser-js": "1.0.35",
     "ui": "workspace:*",
     "zod": "3.22.2",
-    "client-only": "0.0.1"
+    "client-only": "0.0.1",
+    "resend": "1.0.0",
+    "@react-email/components": "0.0.7"
   },
   "devDependencies": {
     "@types/bcryptjs": "2.4.3",
