--- a/apps/web/.env
+++ b/apps/web/.env
@@ -1,4 +1,5 @@
-DATABASE_URL=postgres://tienlx97:W7BErJQIeo5Y@ep-weathered-sunset-66381934.ap-southeast-1.aws.neon.tech/neondb
+DATABASE_URL=postgres://tienlx97:W7BErJQIeo5Y@ep-weathered-sunset-66381934.ap-southeast-1.aws.neon.tech/ct.portal-dev
 
-NEXTAUTH_SECRET=my_ultra_secure_nextauth_secret
+# https://generate-secret.vercel.app/32
+NEXTAUTH_SECRET=4eb1003dbdbbe6f9b8fef48d2e33e549
 NEXTAUTH_URL=http://127.0.0.1:3000
