--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -6,7 +6,7 @@
     "baseUrl": ".",
     "noEmit": true,
     "paths": {
-      "~/*": ["./src/*"]
+      "@ui/*": ["./src/*"]
     },
     "rootDir": "src"
   },
