--- a/apps/web/.env.development
+++ b/apps/web/.env.development
@@ -1,4 +1,9 @@
 GA_MEASUREMENT_ID=G-Y0Z0GLCRDC
 RESEND_API_KEY=re_PVj4BY7c_6U9MjUbuEtRV2j5CYz8Kb2tL
 EMAIL_FROM=onboarding@resend.dev
+DATABASE_URL=postgres://tienlx97:W7BErJQIeo5Y@ep-weathered-sunset-66381934.ap-southeast-1.aws.neon.tech/ct.portal-dev
+
+# https://generate-secret.vercel.app/32
+NEXTAUTH_SECRET=4eb1003dbdbbe6f9b8fef48d2e33e549
+NEXTAUTH_URL=http://127.0.0.1:3000
 
