--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "lint": "eslint",
     "start": "next start",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@auth/core": "^0.14.0",
