--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "prettier": "2.8.8",
     "pretty-quick": "3.1.3",
     "turbo": "latest",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "encoding": "0.1.13"
   },
   "engines": {
     "node": ">=14.0.0"
