--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,9 @@
+hoist-pattern[]=!chalk
 auto-install-peers=true
-enable-pre-post-scripts=true
+strict-peer-dependencies=false
+
+# auto-install-peers=true
+# enable-pre-post-scripts=true
 # arch=x64
 # platform=linux
+
