--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,8 +1,21 @@
 {
-  "tabWidth": 2,
-  "semi": false,
-  "trailingComma": "all",
-  "printWidth": 80,
-  "arrowParens": "avoid",
-  "singleQuote": true
+	"trailingComma": "es5",
+	"tabWidth": 2,
+	"semi": false,
+	"singleQuote": false,
+	"printWidth": 80,
+	"useTabs": true,
+	"endOfLine": "lf",
+	"overrides": [
+		{
+			"files": "*.sol",
+			"options": {
+				"semi": true,
+				"printWidth": 100,
+				"tabWidth": 2,
+				"bracketSpacing": true,
+				"compiler": "0.8.18"
+			}
+		}
+	]
 }
