--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,7 +8,8 @@
     "lint": "eslint",
     "start": "next start",
     "test": "jest --coverage",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "clean": "rm -rf dist && rm -rf node_modules && rm -rf .turbo"
   },
   "dependencies": {
     "@auth/core": "^0.14.0",
@@ -33,12 +34,12 @@
     "@react-email/components": "0.0.7"
   },
   "devDependencies": {
+    "@portal/eslint-config-next": "workspace:*",
+    "@portal/prettier-config": "workspace:*",
     "@types/bcryptjs": "2.4.3",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
-    "eslint-config-custom": "workspace:*",
-    "jest-config": "workspace:*",
     "tsconfig": "workspace:*",
     "@types/gtag.js": "0.0.13"
   }
