--- a/package.json
+++ b/package.json
@@ -1,56 +1,41 @@
 {
-  "name": "ct.portal",
-  "version": "0.0.1",
-  "private": true,
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ],
-  "scripts": {
-    "build": "turbo run build",
-    "dev": "turbo run dev",
-    "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "test": "turbo run test",
-    "prepare": "husky install",
-    "portal": "cd ./apps/web && pnpm dev",
-    "portal:start": "cd ./apps/web && pnpm start",
-    "format-lint": "prettier --config .prettierrc.json --check --ignore-unknown .",
-    "format-fix": "prettier --config .prettierrc.json --write --ignore-unknown -l .",
-    "prisma": "cd ./apps/web && pnpm prisma generate"
-  },
-  "devDependencies": {
-    "@commitlint/cli": "^17.4.2",
-    "@commitlint/config-conventional": "^17.4.2",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/react-hooks": "^8.0.1",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.4.0",
-    "esbuild": "^0.17.5",
-    "esbuild-jest": "^0.5.0",
-    "eslint": "^8.33.0",
-    "eslint-config-custom": "workspace:*",
-    "husky": "^8.0.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.4.1",
-    "jest-watch-typeahead": "^2.2.2",
-    "lint-staged": "14.0.1",
-    "msw": "^1.0.0",
-    "prettier": "2.8.8",
-    "pretty-quick": "3.1.3",
-    "turbo": "latest",
-    "typescript": "5.2.2",
-    "encoding": "0.1.13"
-  },
-  "engines": {
-    "node": ">=14.0.0"
-  },
-  "dependencies": {},
-  "packageManager": "pnpm@8.6.10",
-  "pnpm": {
-    "overrides": {
-      "@auth/core": "^0.14.0"
-    }
-  }
+	"name": "ct.portal",
+	"version": "0.0.1",
+	"private": true,
+	"workspaces": [
+		"apps/*",
+		"packages/*"
+	],
+	"scripts": {
+		"build": "turbo run build --parallel",
+		"clean": "turbo run clean --parallel && rm -rf node_modules",
+		"dev": "turbo run dev --parallel",
+		"format": "prettier --write \"**/*.{ts,tsx,md}\"",
+		"preinstall": "npx only-allow pnpm",
+		"lint": "turbo run lint --parallel",
+		"prepare": "husky install",
+		"prisma": "cd ./apps/web && pnpm prisma generate",
+		"start": "turbo run start --parallel",
+		"test": "turbo run test --parallel"
+	},
+	"devDependencies": {
+		"@commitlint/cli": "^17.4.2",
+		"@commitlint/config-conventional": "^17.4.2",
+		"encoding": "0.1.13",
+		"@portal/eslint-config-root": "workspace:*",
+		"husky": "^8.0.0",
+		"lint-staged": "14.0.1",
+		"@portal/prettier-config": "workspace:*",
+		"turbo": "latest",
+		"typescript": "5.2.2"
+	},
+	"packageManager": "pnpm@8.6.10",
+	"engines": {
+		"node": ">=14.0.0"
+	},
+	"pnpm": {
+		"overrides": {
+			"@auth/core": "^0.14.0"
+		}
+	}
 }
