--- a/turbo.json
+++ b/turbo.json
@@ -32,10 +32,31 @@
 		"tsc": {
 			"dependsOn": ["build"]
 		},
-		"dev": {
+
+		"dev:local": {
 			"cache": false,
 			"persistent": true
 		},
+
+		"dev:staging": {
+			"cache": false,
+			"persistent": true
+		},
+
+		"build:staging": {
+			"outputs": [".next/**", "!.next/cache/**", "dist/**"],
+			"inputs": [
+				"!**/*.spec.tsx",
+				"!**/*.spec.ts",
+				"!**/*.stories.tsx",
+				"!**/*.stories.ts",
+				"!.eslintrc.cjs",
+				"!tsconfig.eslint.json",
+				"!vitest.config.ts",
+				"!vitest.setup.ts"
+			]
+		},
+
 		"clean": {
 			"cache": false
 		}
