--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,13 +3,15 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "build": "next build",
-    "dev": "next dev",
+    "build": "cp .env.prod .env.local && next build",
+    "build:staging": "cp .env.staging .env.local && next build && next start",
+    "clean": "rm -rf dist && rm -rf node_modules && rm -rf .turbo",
+    "dev:local": "cp .env.dev .env.local && next dev",
+    "dev:staging": "cp .env.staging .env.local && next dev",
+    "postinstall": "prisma generate",
     "lint": "eslint",
     "start": "next start",
-    "test": "jest --coverage",
-    "postinstall": "prisma generate",
-    "clean": "rm -rf dist && rm -rf node_modules && rm -rf .turbo"
+    "test": "jest --coverage"
   },
   "dependencies": {
     "@auth/core": "^0.14.0",
@@ -17,30 +19,28 @@
     "@fluentui/react-components": "9.30.4",
     "@hookform/resolvers": "3.3.1",
     "@prisma/client": "5.2.0",
-    "bcryptjs": "2.4.3",
-    "mousetrap": "1.6.5",
+    "@react-email/components": "0.0.7",
+    "client-only": "0.0.1",
     "next": "13.4.19",
     "next-auth": "0.0.0-manual.ffd05533",
     "prisma": "5.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "7.46.1",
+    "resend": "1.0.0",
     "sharp": "^0.32.4",
     "ua-parser-js": "1.0.35",
     "ui": "workspace:*",
-    "zod": "3.22.2",
-    "client-only": "0.0.1",
-    "resend": "1.0.0",
-    "@react-email/components": "0.0.7"
+    "zod": "3.22.2"
   },
   "devDependencies": {
     "@portal/eslint-config-next": "workspace:*",
     "@portal/prettier-config": "workspace:*",
     "@types/bcryptjs": "2.4.3",
+    "@types/gtag.js": "0.0.13",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
-    "tsconfig": "workspace:*",
-    "@types/gtag.js": "0.0.13"
+    "tsconfig": "workspace:*"
   }
 }
