--- a/package.json
+++ b/package.json
@@ -9,23 +9,25 @@
 	"scripts": {
 		"build": "turbo run build --parallel",
 		"clean": "turbo run clean --parallel && rm -rf node_modules",
-		"dev": "turbo run dev --parallel",
+		"dev:staging": "turbo run dev:staging --parallel",
 		"format": "prettier --write \"**/*.{ts,tsx,md}\"",
 		"preinstall": "npx only-allow pnpm",
 		"lint": "turbo run lint --parallel",
 		"prepare": "husky install",
 		"prisma": "cd ./apps/web && pnpm prisma generate",
 		"start": "turbo run start --parallel",
-		"test": "turbo run test --parallel"
+		"test": "turbo run test --parallel",
+		"build:staging": "turbo run build:staging --parallel",
+		"dev:local": "turbo run dev:local --parallel"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^17.4.2",
 		"@commitlint/config-conventional": "^17.4.2",
-		"encoding": "0.1.13",
 		"@portal/eslint-config-root": "workspace:*",
+		"@portal/prettier-config": "workspace:*",
+		"encoding": "0.1.13",
 		"husky": "^8.0.0",
 		"lint-staged": "14.0.1",
-		"@portal/prettier-config": "workspace:*",
 		"turbo": "latest",
 		"typescript": "5.2.2"
 	},
