--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "cp .env.prod .env.local && next build",
-    "build:staging": "cp .env.staging .env.local && next build && next start",
+    "build:staging": "cp .env.staging .env.local && next build",
     "clean": "rm -rf dist && rm -rf node_modules && rm -rf .turbo",
     "dev:local": "cp .env.dev .env.local && next dev",
     "dev:staging": "cp .env.staging .env.local && next dev",
