--- a/apps/web/.env.dev
+++ b/apps/web/.env.dev
@@ -5,7 +5,6 @@ EMAIL_FROM=onboarding@resend.dev
 DATABASE_URL=postgres://tienlx97:W7BErJQIeo5Y@ep-weathered-sunset-66381934.ap-southeast-1.aws.neon.tech/ct.portal-dev
 
 # https://generate-secret.vercel.app/32
-AUTH_SECRET=4eb1003dbdbbe6f9b8fef48d2e33e549
-
+SECRET=this_is_secret
 NEXTAUTH_URL=http://127.0.0.1:3000
 
