--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,11 +3,9 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "build": "cp .env.prod .env.local && next build",
-    "build:staging": "cp .env.staging .env.local && next build",
+    "build": "next build",
     "clean": "rm -rf dist && rm -rf node_modules && rm -rf .turbo",
-    "dev:local": "cp .env.dev .env.local && next dev",
-    "dev:staging": "cp .env.staging .env.local && next dev",
+    "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "eslint",
     "start": "next start",
